# mcz

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  hacs.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  release.yml
config/: configuration.yaml
custom_components/mczmaestro/: __init__.py  climate.py  config_flow.py  const.py  entity.py  manifest.json  number.py  sensor.py  switch.py
custom_components/mczmaestro/lib/: controller.py
custom_components/mczmaestro/maestro/: __init__.py  controller.py
tests/mczmaestro/: __init__.py  test_climate.py  test_config_flow.py
tests/mczmaestro/lib/: __init__.py  test_controller.py
tests/mczmaestro/maestro/: test_controller.py
